{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 31,
  "lineage": "4fceed09-58fa-d3b1-c561-33e82fc2c22c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].canada",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:866940357665:security-group/sg-06f5316ae224821c8",
            "description": "It allows HTTP (80) and HTTPS (443)",
            "egress": [],
            "id": "sg-06f5316ae224821c8",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow HTTP and HTTPS",
            "name_prefix": "",
            "owner_id": "866940357665",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c12a91aebd21d22c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:866940357665:vpc/vpc-0bb0750e7a2079356",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ac8aa5769c813751",
            "default_route_table_id": "rtb-0855f08885ffb1875",
            "default_security_group_id": "sg-0f5f7b0867354460a",
            "dhcp_options_id": "dopt-0d9819a33d0f3c84f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bb0750e7a2079356",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0855f08885ffb1875",
            "owner_id": "866940357665"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:866940357665:security-group-rule/sgr-0bfccb5a44ad46166",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0bfccb5a44ad46166",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06f5316ae224821c8",
            "security_group_rule_id": "sgr-0bfccb5a44ad46166",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.security_group_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:866940357665:security-group-rule/sgr-0104e3dc2496b003c",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0104e3dc2496b003c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06f5316ae224821c8",
            "security_group_rule_id": "sgr-0104e3dc2496b003c",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.security_group_test",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "https",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:866940357665:security-group-rule/sgr-098dcd61bbba75de0",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-098dcd61bbba75de0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06f5316ae224821c8",
            "security_group_rule_id": "sgr-098dcd61bbba75de0",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.security_group_test",
            "aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}